<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="MccRev_006" Id="{2c593c74-3b4b-4ed8-8f27-5050f68dc2a4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

// FB DRIVE MccRev_006
	bAutoButton  	   : BOOL;  // SCADA button Auto/manual Command
	bForwardButton     : BOOL;  // SCADA button Forward drive Command
	bReverseButton	   : BOOL;  // SCADA button Reverse drive Command	 
	bTermFuse          : BOOL;  // Term Fuse state from psyhical input
	bContactor         : BOOL;  // Contactor state from psyhical output
	udHours   		   : UDINT; // Work Time Counter - hours nonvolatile memory register
	uMinutes	   	   : UINT;  // Work Time Counter - minuts nonvolatile memory register
	uSeconds           : UINT;  // Work Time Counter - seconds nonvolatile memory register
  	sStatus	           : T_MaxString; // Motor Status string
	sState 	           : T_MaxString; // Motor State string	

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>